Mon Mar 12 18:59:38 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): save/restore $libs and $LIBPATH.

Sun Mar 11 00:55:31 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (install_rb): fix handling of destination path.

Sat Mar 10 02:34:18 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* math.c (math_log, math_log10): use nan() instead of 0.0/0.0 on Cygwin.

Thu Mar  8 17:43:59 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: one write(2) per one line.

Wed Mar  7 14:26:11 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* math.c (math_log, math_log10): should return NaN if x < 0.0
	  on Cygwin.

Tue Mar  6 10:50:29 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): rescue and ensure clauses should be allowed
	  to appear in singleton method body.

Mon Mar  5 17:25:13 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_eq): compare Procs using blocktag equality.

	* eval.c (proc_to_s): stringify according to block tag address.

Mon Mar  5 17:19:56 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (gettimeofday): use GetLocalTime() instead of ftime()
	  for high-resolution timing.

Sun Mar  4 20:45:20 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in, lib/mkmf.rb: add C++ rules in addition to C
	rules.

Sun Mar  4 17:01:09 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* string.c (trnext): support backslash escape in String#tr.

Wed Feb 28 11:02:41 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_delete_bang): delete! should take at least 1
	  argument. 

Tue Feb 27 16:38:15 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ev_const_get): retrieve Object's caonstat if no current
	  class is available (e.g. defining singleton class for Fixnums).

	* eval.c (ev_const_defined): check Object's constant if no current
	  class is available (e.g. defining singleton class for Fixnums).
